--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,1 +1,33 @@
-1111
+<header class="header">
+<div class="header__container">
+	<nav class="header__nav nav-header">
+		<a
+				class="nav-header__logo"
+				href="/"
+		>
+	<img
+			src="../img/logo_52.png"
+			width=""
+			alt=""
+	>
+	</a>
+		<ul class="nav-header__menu-list nav-menu-list">
+			<li class="nav-menu-list__item">
+				<a href="">About us</a>
+			</li>
+			<li class="nav-menu-list__item">
+				<a href="">Work</a>
+			</li>
+			<li class="nav-menu-list__item">
+				<a href="">Shop</a>
+			</li>
+			<li class="nav-menu-list__item">
+				<a href="">Contacts</a>
+			</li>
+		</ul>
+		<button class="nav-header__menu-button nav-menu-button">
+			<span></span>
+		</button>
+	</nav>
+</div>
+</header>
