--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,1 +1,46 @@
-124124
+<footer class="footer">
+<div class="footer__container footer__wrapper">
+		<div class="footer__firm footer-firm">
+		<h2 class="footer-firm__title">AOD New York</h2>
+		<p class="footer-firm__description">
+			2250 Lexington Avenue<br>
+			New York, NY 10035  - info@domain.com
+		</p>
+	</div>
+	<nav class="footer__social footer-social">
+		<ul class="footer-social-list">
+			<li class="footer-social-item">
+				<a href="" target="_blank">
+			<img
+					src="../img/twitter.png"
+					alt=""
+			>
+		</a>
+			</li>
+			<li class="footer-social-item">
+				<a href="" target="_blank">
+			<img
+					src="../img/facebook.png"
+					alt=""
+			>
+		</a>
+			</li>
+			<li class="footer-social-item">
+				<a href="" target="_blank">
+			<img
+					src="../img/pinterest.png"
+					alt=""
+			>
+		</a>
+			</li>
+		</ul>
+	</nav>
+	<div class="footer__owner footer-owner">
+		<p class="footer-owner__description">Handcrafted by</p>
+		<img class="footer-owner__logo"
+			 src="../img/y_e_b_o_logo_206.png"
+			 alt=""
+		>
+	</div>
+</div>
+</footer>
